infra/load-testing-firewall/arm/template.json
{
    "$schema": "http://schema.management.azure.com/schemas/2019-08-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "name": {
            "type": "String"
        },
        "location": {
            "type": "String"
        },
        "tags": {
            "type": "Object"
        }
    },
    "variables": {
        "loadTestingVNETName": "[concat(parameters('name'),'vnet')]",  
        "loadTestingSubnetName": "[concat(parameters('name'),'subnet')]",  
        "loadTestingNsgName": "[concat(parameters('name'),'nsg')]",  
        "loadTestingPip": "[concat(parameters('name'),'pip')]",  
        "loadTestingNATGatewayName": "[concat(parameters('name'),'natgw')]"  
    },
    "resources": [
        {
            "type": "Microsoft.LoadTestService/loadtests",
            "apiVersion": "2021-12-01-preview",
            "name": "[parameters('name')]",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]"
        },
        {
            "apiVersion": "2021-05-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('loadTestingNsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "batch-node-management-inbound",
                        "properties": {
                            "description": "Create, update, and delete of Azure Load Testing compute instances.\n",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "29876-29877",
                            "sourceAddressPrefix": "BatchNodeManagement",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "azure-load-testing-inbound",
                        "properties": {
                            "description": "Create, update, and delete of Azure Load Testing compute instances.\n",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "AzureLoadTestingInstanceManagement",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "azure-load-testing-outbound",
                        "properties": {
                            "description": "Used for various operations involved in orchestrating a load tests.\n",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },        
        {
            "apiVersion": "2021-05-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('loadTestingPip')]",
            "location": "[parameters('location')]",
            "sku": {
              "name": "Standard"
            },      
            "properties": {
              "publicIPAddressVersion": "IPv4",
              "publicIPAllocationMethod": "Static",
              "idleTimeoutInMinutes": 4              
            }
        },                
        {
            "apiVersion": "2021-05-01",
            "type": "Microsoft.Network/natGateways",
            "name": "[variables('loadTestingNATGatewayName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('name'),'pip'))]"
            ],            
            "properties": {
                "idleTimeoutInMinutes": 4,
                "publicIpAddresses": [
                    {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('name'),'pip'))]"
                    }
                ]                
            },
            "sku": {
                "name": "Standard"
            }
        },
        {
            "apiVersion": "2021-05-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('loadTestingVNETName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/natGateways', variables('loadTestingNATGatewayName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('loadTestingNsgName'))]"
            ],            
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": []
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.1.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('loadTestingNsgName'))]"
                            }
                        }
                    },                    
                    {
                        "name": "[concat(parameters('name'),'subnet')]",
                        "properties": {
                            "addressPrefix": "10.1.1.0/24",
                            "natGateway": {
                                "id": "[resourceId('Microsoft.Network/natGateways', variables('loadTestingNATGatewayName'))]"
                            },
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('loadTestingNsgName'))]"
                            }
                        }
                    }
                ]
            }
        }        
    ],    
    "outputs": {
      "natGatewayName": {
        "type": "string",
        "value": "[variables('loadTestingNATGatewayName')]"
      },
      "publicIPAddressName": {
        "type": "string",
        "value": "[variables('loadTestingPip')]"
      },
      "vnetName": {
        "type": "string",
        "value": "[variables('loadTestingVNETName')]"
      },
      "subnetName": {
        "type": "string",
        "value": "[variables('loadTestingSubnetName')]"
      },
      "publicIPAddress": {
        "type": "string",
        "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('loadTestingPip'))).IpAddress]"
      },
      "subnetId": {
        "type": "string",
        "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('loadTestingVNETName')), '/subnets/',  variables('loadTestingSubnetName'))]"
      }      
    }    
}
